--- a/styles/style.css
+++ b/styles/style.css
@@ -24,20 +24,34 @@ input {
     width: 300px;
 }
 
-.entrar {
+.acesso {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    margin: 0%;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin: 6% 40% 10% 28%;
+    /* border: 2px solid #22D4FD; */
+    gap: 10%;
 }
 
-.cadastrar {
+.acesso__entrar {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20%;
+    justify-content: space-evenly;
+    gap: 15px;
+}
+
+.acesso__entrar__recuperacao {
+    margin-left: 0%;
+}
+
+.acesso__cadastrar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
+    gap: 15px;
 }
 
 button {
